--- a/header-mng.html
+++ b/header-mng.html
@@ -4,7 +4,7 @@
                 <div class="col-lg-2">
                     <div class="heading_logo">
                         <a href="http://dv.hony.com.tw:800/">
-                            <img src="logo/3.png" height="60%">
+                            <img src="img/logo.png" height="60%">
                         </a>
                     </div>
                 </div>
@@ -20,7 +20,7 @@
                                 <li><a href="spot-mange.php">拍攝景點<span class="arrow_carrot-down"></span></a>
                                     <ul class="dropdown">
                                         <li><a href="spot-complication.php">景點列表</a></li>
-                                        <li><a href="hotspot-edit.php">景點列表</a></li>
+                                        <li><a href="hotspot-edit.php">熱門景點</a></li>
                                     </ul>
                                 </li>
                                 <li><a href="event-manage.php">活動</a></li>
