--- a/header-mng.html
+++ b/header-mng.html
@@ -17,7 +17,7 @@
                                 <li><a href="movie-back.php">電影</a></li>
                                 <li><a href="genre.php">分類</a></li>
                                 <li><a href="actor.php">演員</a></li>
-                                <li><a href="spot-mange.php">拍攝景點<span class="arrow_carrot-down"></span></a>
+                                <li><a href="spot-manage.php">拍攝景點<span class="arrow_carrot-down"></span></a>
                                     <ul class="dropdown">
                                         <li><a href="spot-complication.php">景點列表</a></li>
                                         <li><a href="hotspot-edit.php">熱門景點</a></li>
