--- a/header-mng.html
+++ b/header-mng.html
@@ -24,11 +24,10 @@
                                     </ul>
                                 </li>
                                 <li><a href="event-manage.php">活動</a></li>
+                                <li><a href="index.php">登出</a></li>
                             </ul>
                         </nav>
                     </div>
                 </div>
-            </div>
-            <div id="mobile-menu-wrap"></div>
-        </div>
+
     </header>
