--- a/header.html
+++ b/header.html
@@ -41,6 +41,7 @@
                 </div>
                 <div class="col-lg-2">
                     <div class="header__right">
+                        <a href="filter.php" class="search-switch"><i class="fa-solid fa-filter fa-lg" style="color: #ffffff;"></i></a>
                         <a href="search.php" class="search-switch"><i class="fa-solid fa-magnifying-glass fa-lg" style="color: #ffffff;"></i></a>
                     </div>
                 </div>
