--- a/header.html
+++ b/header.html
@@ -35,6 +35,7 @@
                                     </ul>
                                 </li>
                                 <li><a href="event.php">活動專區</a></li>
+                                <li><a href="map.php">行程規劃</a></li>
                             </ul>
                         </nav>
                     </div>
