--- a/footer.html
+++ b/footer.html
@@ -6,7 +6,7 @@
             <div class="row">
                 <div class="col-lg-3">
                     <div class="footer__logo">
-                        <a href="index.php"><img src="img/logo.png"></a>
+                        <a href="index.php"><img src="img/logo.png" height="80%"></a>
                     </div>
                 </div>
                 <div class="col-lg-6">
@@ -17,6 +17,7 @@
                             <li><a href="movie.php">電影</a></li>
                             <li><a href="spot.php">拍攝景點</a></li>
                             <li><a href="event.php">活動專區</a></li>
+                            <li><a href="map.php">地圖</a></li>
                         </ul>
                     </div>
                 </div>
