--- a/header-mng.html
+++ b/header-mng.html
@@ -19,15 +19,16 @@
                                 <li><a href="actor.php">演員</a></li>
                                 <li><a href="spot-manage.php">拍攝景點<span class="arrow_carrot-down"></span></a>
                                     <ul class="dropdown">
-                                        <li><a href="spot-complication.php">景點列表</a></li>
+                                        <li><a href="spot-complication.php">景點合輯</a></li>
                                         <li><a href="hotspot-edit.php">熱門景點</a></li>
                                     </ul>
                                 </li>
                                 <li><a href="event-manage.php">活動</a></li>
-                                <li><a href="index.php">登出</a></li>
+                                <li><a href="index.php" style="background-color: white; color: #fed566; padding: 10px 8px; border-radius: 5px;">登出</a></li>
                             </ul>
                         </nav>
                     </div>
                 </div>
-
+            </div>
+        </div>
     </header>
